<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rl_titlebar"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        android:background="@color/theme_color_heavy">

        <RelativeLayout
            android:id="@+id/rl_left"
            android:layout_width="60dip"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:visibility="visible">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_help"
                android:layout_centerInParent="true" />
            
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_launcher"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/color_FFFFFF"
                android:layout_gravity="center_vertical"
                android:textSize="20sp" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rl_right"
            android:layout_width="60dip"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true" >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_add_device"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:id="@+id/vw_ac_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_titlebar"
        android:background="@color/color_FFFFFF"/>

    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:background="@color/grey100"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vw_ac_line">
        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="7dp"
            android:src="@drawable/search"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@null"
            android:singleLine="true"
            style="?android:attr/textViewStyle"
            android:hint="@string/tag_list_search_hint"
            android:layout_toEndOf="@+id/iv_search"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"/>


    </RelativeLayout>

    <View
        android:id="@+id/vw_ac_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_search"
        android:background="@color/color_FFFFFF"/>

    <ListView
        android:id="@+id/lv_devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/vw_ac_line3"
        android:layout_above="@id/vw_ac_line2"
        android:scrollbars="none"
        android:background="#f9f9f9">
    </ListView>



    <View
        android:id="@+id/vw_ac_line2"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_above="@id/rl_bottom_3_buttons"
        android:background="@color/color_FFFFFF"/>

    <LinearLayout
        android:id="@+id/rl_bottom_3_buttons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/rl_enable_locate"
        android:background="@color/theme_color_light"
        android:visibility="gone"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rl_tagList_selfie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/iv_selfie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iv_take_picture" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_ffffff"
                    android:layout_marginLeft="5dip"
                    android:layout_toEndOf="@id/iv_selfie"
                    android:text="@string/tag_button_function_take_picture"/>

            </RelativeLayout>

        </RelativeLayout>

        <View style="@style/settings_lineView_veril" />

        <RelativeLayout
            android:id="@+id/rl_tagList_recordVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <ImageView
                    android:id="@+id/iv_recordVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iv_camera" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dip"
                    android:textColor="@color/color_ffffff"
                    android:layout_toEndOf="@id/iv_recordVideo"
                    android:text="@string/tag_button_function_record_video"/>
            </RelativeLayout>
        </RelativeLayout>

        <View style="@style/settings_lineView_veril" />

        <RelativeLayout
            android:id="@+id/rl_tagList_recordAudio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/iv_recordAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iv_recod" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dip"
                    android:textColor="@color/color_ffffff"
                    android:layout_toEndOf="@id/iv_recordAudio"
                    android:text="@string/tag_button_function_record_audio"/>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_enable_locate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_F4F4F4"
        android:layout_alignParentBottom="true">
        <Switch
            android:id="@+id/switch_enable_locate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:checked="true"
            android:text="@string/tag_list_enable_locate"/>
        <TextView
            android:id="@+id/tv_version_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_enable_locate"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:text="Version Information Not Avaible."/>
    </RelativeLayout>

</RelativeLayout>